Session 분리 및 메인 월드 서버 역할 정리

--- a/2024_MainServer.vcxproj
+++ b/2024_MainServer.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="MainServer.cpp" />
+    <ClCompile Include="Session.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EXP_Over.h" />
