터레인 구현, 모든 플레이어 y값을 터레인 높이에 고정시켜놓음

--- a/2024_MainServer.vcxproj
+++ b/2024_MainServer.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CHeightMap.cpp" />
     <ClCompile Include="db.cpp" />
     <ClCompile Include="MainServer.cpp" />
     <ClCompile Include="Object.cpp" />
@@ -134,6 +135,7 @@
     <ClCompile Include="Session.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CHeightMap.h" />
     <ClInclude Include="db.h" />
     <ClInclude Include="EXP_Over.h" />
     <ClInclude Include="global.h" />
